# FIFA-Draft-simulator-using-C-with-OOP

./: CMakeLists.txt  README.md  main.cpp
classes/: ClubMember.h  Ctrl.cpp  Ctrl.h  GameMechanic.cpp  GameMechanic.h  GamePlan.cpp  GamePlan.h  GameProcess.cpp  GameProcess.h  IPlayer.h  Person.h  Player.cpp  Player.h  QuickGamePlan.cpp  QuickGamePlan.h
data/: PlrData.data
